<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical">


    <EditText
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/calc_display"
        android:fontFamily="@font/advent_pro_bold"
        android:gravity="end"
        android:hint="@string/_0"
        android:inputType="number"
        android:paddingTop="45pt"
        android:singleLine="true"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="jelly_bean" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="?android:attr/dividerHorizontal"
        android:showDividers="middle">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">


            <Button
                android:id="@+id/butAC"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/calc_left_pane"
                android:onClick="calcEntry"
                android:text="@string/ac"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@color/calc_text_color"
                android:layout_marginEnd="1dp" />

            <Button
                android:id="@+id/butPlusMinus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/calc_left_pane"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="calcEntry"
                android:text="@string/plusMinus"
                android:textColor="@color/calc_text_color"
                android:layout_marginEnd="1dp" />

            <Button
                android:id="@+id/butPercentage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/calc_left_pane"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="calcPercent"
                android:text="@string/percent"
                android:textColor="@color/calc_text_color"
                android:layout_marginEnd="1dp" />

            <Button
                android:id="@+id/butDivide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/calc_right_pane"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="calcOp"
                android:text="@string/butDivide"
                android:textColor="@color/calc_text_color" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <Button
                android:id="@+id/but7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/calc_left_pane"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="calcEntry"
                android:text="@string/_7"
                android:textColor="@color/calc_text_color"
                android:layout_marginEnd="1dp" />

            <Button
                android:id="@+id/but8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/calc_left_pane"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="calcEntry"
                android:text="@string/_8"
                android:textColor="@color/calc_text_color"
                android:layout_marginEnd="1dp" />

            <Button
                android:id="@+id/but9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/calc_left_pane"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="calcEntry"
                android:text="@string/_9"
                android:textColor="@color/calc_text_color"
                android:layout_marginEnd="1dp" />

            <Button
                android:id="@+id/butX"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/calc_right_pane"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="calcOp"
                android:text="@string/x"
                android:textColor="@color/calc_text_color" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <Button
                android:id="@+id/but4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/calc_left_pane"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="calcEntry"
                android:text="@string/_4"
                android:textColor="@color/calc_text_color"
                android:layout_marginEnd="1dp" />

            <Button
                android:id="@+id/but5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/calc_left_pane"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="calcEntry"
                android:text="@string/_5"
                android:textColor="@color/calc_text_color"
                android:layout_marginEnd="1dp" />

            <Button
                android:id="@+id/but6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/calc_left_pane"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="calcEntry"
                android:text="@string/_6"
                android:textColor="@color/calc_text_color"
                android:layout_marginEnd="1dp" />

            <Button
                android:id="@+id/butMinus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/calc_right_pane"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="calcOp"
                android:text="@string/minus"
                android:textColor="@color/calc_text_color" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <Button
                android:id="@+id/but1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/calc_left_pane"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="calcEntry"
                android:text="@string/_1"
                android:textColor="@color/calc_text_color"
                android:layout_marginEnd="1dp" />

            <Button
                android:id="@+id/but2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/calc_left_pane"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="calcEntry"
                android:text="@string/_2"
                android:textColor="@color/calc_text_color"
                android:layout_marginEnd="1dp" />

            <Button
                android:id="@+id/but3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/calc_left_pane"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="calcEntry"
                android:text="@string/_3"
                android:textColor="@color/calc_text_color"
                android:layout_marginEnd="1dp" />

            <Button
                android:id="@+id/butPlus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/calc_right_pane"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="calcOp"
                android:text="@string/plus"
                android:textColor="@color/calc_text_color" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <Button
                android:id="@+id/butZero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/calc_left_pane"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="calcEntry"
                android:text="@string/_0"
                android:textColor="@color/calc_text_color"
                android:layout_marginEnd="1dp" />

            <Button
                android:id="@+id/butPi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/calc_left_pane"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="calcEntry"
                android:text="@string/pi"
                android:textColor="@color/calc_text_color"
                android:layout_marginEnd="1dp" />

            <Button
                android:id="@+id/butDot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/calc_left_pane"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="calcEntry"
                android:text="@string/dot"
                android:textColor="@color/calc_text_color"
                android:layout_marginEnd="1dp" />

            <Button
                android:id="@+id/butEqual"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/calc_right_pane"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="equal"
                android:text="@string/equal"
                android:textColor="@color/calc_text_color" />
        </TableRow>


    </TableLayout>


</LinearLayout>
